--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
-                navigator.serviceWorker.register('sw.js').then(function(registration) {
+                // './sw.js' olarak kaydediyoruz (Nokta önemli)
+                navigator.serviceWorker.register('./sw.js').then(function(registration) {
                     console.log('SW Başarılı:', registration.scope);
                 }, function(err) { console.log('SW Hatası:', err); });
             });
