--- a/index.html
+++ b/index.html
@@ -422,6 +422,13 @@
 
             <div id="schedule-input-section" style="display:none;">
                 <h4>Maç Planlama 📅</h4>
+                <label class="input-label">Kort Tipi:</label>
+                <select id="match-court-type-select">
+                    <option value="">Kort Tipi Seçiniz</option>
+                    <option value="Toprak">Toprak</option>
+                    <option value="Sert">Sert</option>
+                    <option value="Çim">Çim</option>
+                </select>
                 <label class="input-label">Kort Seçimi:</label>
                 <select id="match-venue-select"><option value="">Kort Seçiniz</option></select>
                 <label class="input-label">Tarih ve Saat:</label>
