--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
                 </div>
                 <button id="btn-close-spam-alert" class="warning-close">&times;</button>
             </div>
+
+            <div id="profile-incomplete-alert" class="warning-banner info-banner" style="display: none;">
+        <div class="warning-icon">👤</div>
+        <div class="warning-content">
+            <strong>Profilin Çok Sessiz Görünüyor!</strong>
+            <p>Diğer oyuncuların seni tanıması için fotoğrafını yükle ve bilgilerini tamamla.</p>
+            <button id="btn-fix-profile" style="background:#0d47a1; color:white; padding:5px 10px; font-size:0.8em; margin-top:5px; width:auto; border-radius:15px;">Hemen Düzenle ✏️</button>
+        </div>
+        <button id="btn-close-profile-alert" class="warning-close">&times;</button>
+    </div>
             
             <div id="weather-widget" class="lobby-card" style="background: linear-gradient(135deg, #56ab2f 0%, #a8e063 100%); color: white; border:none; display:none;">
                     <div style="display:flex; justify-content:space-between; align-items:center;">
