--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     <div id="register-fields" style="display: none;">
                         <div class="profile-upload-container">
-                            <img id="profile-preview" src="https://via.placeholder.com/100" alt="Profil">
+                            <img id="profile-preview" src="logo.png" alt="Profil">
                             <label for="profile-photo" class="upload-label">+ Fotoğraf Seç</label>
                             <input type="file" id="profile-photo" accept="image/*" style="display:none;">
                         </div>
@@ -473,7 +473,7 @@
 
             <div class="profile-header-card">
                 <div class="profile-upload-container">
-                    <img id="edit-profile-preview" src="https://via.placeholder.com/100" class="profile-preview-large" style="width:100px; height:100px; border:3px solid #f0f0f0;">
+                    <img id="edit-profile-preview" src="https://logo.png" class="profile-preview-large" style="width:100px; height:100px; border:3px solid #f0f0f0;">
                     <label for="edit-profile-photo" class="upload-label-blue" style="margin-top:10px; display:inline-block; background:#e3f2fd; padding:5px 15px; border-radius:20px; font-weight:600;">📷 Fotoğrafı Değiştir</label>
                     <input type="file" id="edit-profile-photo" accept="image/*" style="display:none;">
                 </div>
